[package]
name = "shironcat-github-io"
version = "0.1.0"
edition = "2018"
description = "ShironCat's personal blog and portfolio built and rendered using Rust/WASM."
readme = "README.md"
repository = "https://github.com/ShironCat/ShironCat.github.io"
license = "Apache-2.0"
keywords = ["blog", "portfolio", "wasm", "yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.18.0"
yew-router = "0.15.0"